# conductor-ai-takehome

./: README.md  pyproject.toml  table_investigation.ipynb  test-pdf.docx
.ipynb_checkpoints/: program_investigation-checkpoint.ipynb
tests/: test_unit.py
word_search_program/: __init__.py  main.py  page_reader.py
